Fix #117647: Accumulate Field ID input is not connecting via gather link searcher

Use socket name instead of identifier.

Pull Request: https://projects.blender.org/blender/blender/pulls/117648